use rdp::encode_full;

fn main() {
    let mut aws_keys = vec![
        "log.attributes.log.file.path",
        "log.attributes.log.iostream",
        "log.attributes.logtag",
        "log.dropped_attributes_count",
        "log.event_name",
        "log.flags",
        "log.observed_time_unix_nano",
        "log.severity_number",
        "log.severity_text",
        "log.time_unix_nano",
        "resource.attributes.host.name",
        "resource.attributes.k8s.container.name",
        "resource.attributes.k8s.container.restart_count",
        "resource.attributes.k8s.namespace.name",
        "resource.attributes.k8s.node.name",
        "resource.attributes.k8s.pod.name",
        "resource.attributes.k8s.pod.start_time",
        "resource.attributes.k8s.pod.uid",
        "resource.attributes.os.type",
        "resource.schema_url",
        "resource.attributes.k8s.deployment.name",
        "log.body.level",
        "log.body.message",
        "log.body.time",
        "log.body.severity",
        "log.body.timestamp",
        "log.body.local_addr.IP",
        "log.body.local_addr.Port",
        "log.body.local_addr.Zone",
        "log.body.remote_addr.ForceQuery",
        "log.body.remote_addr.Fragment",
        "log.body.remote_addr.Host",
        "log.body.remote_addr.OmitHost",
        "log.body.remote_addr.Opaque",
        "log.body.remote_addr.Path",
        "log.body.remote_addr.RawFragment",
        "log.body.remote_addr.RawPath",
        "log.body.remote_addr.RawQuery",
        "log.body.remote_addr.Scheme",
        "log.body.remote_addr.User",
        "log.body.file",
        "log.body.id",
        "log.body.line",
        "log.body.TR",
        "log.body.Ta",
        "log.body.Tc",
        "log.body.Th",
        "log.body.Ti",
        "log.body.Tr",
        "log.body.Tw",
        "log.body.actconn",
        "log.body.backend_name",
        "log.body.backend_queue",
        "log.body.beconn",
        "log.body.bytes_read",
        "log.body.cf_conn_ip",
        "log.body.client_ip",
        "log.body.client_port",
        "log.body.date_time",
        "log.body.feconn",
        "log.body.frontend_name",
        "log.body.http_method",
        "log.body.http_query",
        "log.body.http_uri",
        "log.body.http_version",
        "log.body.retries",
        "log.body.server_name",
        "log.body.srv_queue",
        "log.body.srvconn",
        "log.body.ssl_ciphers",
        "log.body.ssl_version",
        "log.body.status_code",
        "log.body.termination_state",
        "log.body.unique_id",
        "log.body.size",
        "log.body.status",
        "resource.attributes.k8s.daemonset.name",
        "resource.attributes.component",
        "log.body.fields.otelcol.component.id",
        "log.body.fields.otelcol.component.kind",
        "log.body.fields.otelcol.signal",
        "log.body.fields.resource.service.instance.id",
        "log.body.fields.resource.service.name",
        "log.body.fields.resource.service.version",
        "log.body.fields.data",
        "log.body.fields.metrics",
        "log.body.fields.resource",
        "log.body.topic",
        "log.body.msg",
        "log.body.method",
        "log.body.path",
        "log.body.agent",
        "log.body.host",
        "log.body.protocol",
        "log.body.referrer",
        "log.body.user_id",
        "log.body.duration",
        "log.body.ts",
        "log.body.logger",
        "log.body.request.host",
        "log.body.request.method",
        "log.body.request.proto",
        "log.body.request.remote_ip",
        "log.body.request.remote_port",
        "log.body.request.uri",
        "log.body.serviceURL.ForceQuery",
        "log.body.serviceURL.Fragment",
        "log.body.serviceURL.Host",
        "log.body.serviceURL.OmitHost",
        "log.body.serviceURL.Opaque",
        "log.body.serviceURL.Path",
        "log.body.serviceURL.RawFragment",
        "log.body.serviceURL.RawPath",
        "log.body.serviceURL.RawQuery",
        "log.body.serviceURL.Scheme",
        "log.body.serviceURL.User",
        "log.body.ClientAddr",
        "log.body.ClientHost",
        "log.body.ClientPort",
        "log.body.ClientUsername",
        "log.body.DownstreamContentSize",
        "log.body.DownstreamStatus",
        "log.body.Duration",
        "log.body.GzipRatio",
        "log.body.OriginContentSize",
        "log.body.OriginDuration",
        "log.body.OriginStatus",
        "log.body.Overhead",
        "log.body.RequestAddr",
        "log.body.RequestContentSize",
        "log.body.RequestCount",
        "log.body.RequestHost",
        "log.body.RequestMethod",
        "log.body.RequestPath",
        "log.body.RequestPort",
        "log.body.RequestProtocol",
        "log.body.RequestScheme",
        "log.body.RetryAttempts",
        "log.body.RouterName",
        "log.body.ServiceAddr",
        "log.body.ServiceName",
        "log.body.ServiceURL",
        "log.body.StartLocal",
        "log.body.StartUTC",
        "log.body.entryPointName",
        "log.body.request_User-Agent",
        "resource.attributes.app",
        "log.body.apiVersion",
        "log.body.eventTime",
        "log.body.firstTimestamp",
        "log.body.involvedObject.apiVersion",
        "log.body.involvedObject.kind",
        "log.body.involvedObject.name",
        "log.body.involvedObject.resourceVersion",
        "log.body.involvedObject.uid",
        "log.body.kind",
        "log.body.lastTimestamp",
        "log.body.metadata.creationTimestamp",
        "log.body.metadata.name",
        "log.body.metadata.namespace",
        "log.body.metadata.resourceVersion",
        "log.body.metadata.uid",
        "log.body.reason",
        "log.body.reportingComponent",
        "log.body.reportingInstance",
        "log.body.type",
        "log.body.involvedObject.namespace",
        "log.body.count",
        "log.body.source.component",
        "log.body.record-id",
        "log.body.record-type",
        "log.body.service",
        "log.body.bootstrap",
        "log.body.config_file_source",
        "log.body.session_id",
        "log.body.source.host",
        "log.body.involvedObject.fieldPath",
        "log.body.authority",
        "log.body.forwarded-for",
        "log.body.referer",
        "log.body.request-id",
        "log.body.response-code",
        "log.body.response-code-details",
        "log.body.upstream-cluster",
        "log.body.user-agent",
        "log.body.svc",
        "resource.attributes.k8s.cronjob.name",
        "resource.attributes.k8s.job.name",
        "log.body.account",
        "log.body.action",
        "log.body.arn",
        "log.body.caller",
        "log.body.err",
        "log.body.job_type",
        "log.body.region",
        "log.body.version",
        "log.body.fields.component",
        "log.body.fields.path",
        "log.body.error",
        "log.body.agents_missing_from_emqx",
        "log.body.agents_unreachable_postgres_disconnected",
        "log.body.emqx_client_id_count",
        "log.body.failed",
        "log.body.fields.error",
        "log.body.fields.interval",
        "log.body.fields_raw",
        "log.body.progress",
        "log.body.successful",
        "log.body.unreachable_agents_cleaned",
        "my.deeply.nested.key.checks.run.length.encoding.works.well",
        "log.body.HOSTNAME",
        "HTTPSConnection",
        "OAuth2Token",
        "foo.bar",
        "foo_bar",
        "fooBar",
        "resource.attributes.service.instance.environment.region.zone",
        // "resource.cαλημέρα",
    ];

    // Sort keys to ensure consistent ordering
    aws_keys.sort();

    // Collect all output lines for checksum calculation
    let mut all_output = String::new();

    for otel_key in &aws_keys {
        let systemd_key = encode_full(otel_key.as_bytes());
        let line = format!("{:<40} {}\n", otel_key, systemd_key);
        print!("{}", line);
        all_output.push_str(&line);
    }

    // Calculate and print MD5 checksum of all output
    let digest = md5::compute(all_output.as_bytes());
    println!("\nMD5 Checksum: {:x}", digest);
}
